src/bootstrap/test/v0_8/rejects/07_operator_no_impl/main.zg
# requires: v0.17
#
# A user struct that does NOT implement Add cannot use `a + b` —
# the operator-spec lookup misses and the primitive arms reject.

struct Point { x: int, y: int }

a := Point { x: 1, y: 2 }
b := Point { x: 3, y: 4 }
print (a + b).x
